# building-agents

./: README.md  spec.md
evals/: run.py
examples/: README.md  production_agent.py  pyproject.toml  safe_agent.py  sandbox_agent.py  stateful_chatbot.py  test.py  traced_agent.py
modules/01-what-is-an-agent/: README.md
modules/02-an-llm-call/: README.md
modules/03-add-a-loop/: README.md
modules/04-add-memory/: README.md
modules/05-add-tools/: README.md
modules/06-add-sandboxing/: README.md
modules/07-add-guardrails/: README.md
modules/08-add-observability/: README.md
modules/09-add-evaluation/: README.md
modules/10-add-performance/: README.md
presentation/: .gitignore  README.md  index.html  package-lock.json  package.json  slides.md  style.css  tsconfig.json  vite.config.ts
presentation/src/: Deck.tsx  main.tsx  theme.ts
presentation/src/components/: AnatomyBox.tsx  CapabilityMatrix.tsx  Code.tsx  ComparisonPanel.tsx  EnvironmentGrid.tsx  Mermaid.tsx  Radial.tsx  SequenceDiagram.tsx  Spectrum.tsx  StateSplit.tsx  Timeline.tsx  Triad.tsx  code.css
presentation/src/slides/: 00-cover.tsx  01-orientation.tsx  02-what-is-an-agent.tsx  03-llm-call.tsx  04-add-a-loop.tsx  05-closing.tsx
